# cida_attendance_system

./: .gitignore  README.md  cida_attendance.spec  pyproject.toml  setup_script.iss
cida_attendance/: __main__.py  cli.py  client.py  config.py  constants.py  gui.py  icon.py  sdk_bindings.py  session.py  structures.py  tasks.py  utils.py
cida_attendance/sdk/: _generated.py  bindings.py  session.py  utils.py
examples/: list_events.py  monitor_alarms.py
installers/: cida_attendance.spec  cida_attendance_headless.spec  setup_script.iss
packaging/: nfpm.yaml
packaging/scripts/: postinstall.sh  preremove.sh
packaging/systemd/: cida-attendance.service
scripts/: build_linux_packages.sh  create_table.sql  extract_libs.py  generate_api_key.py  test_alarm_events.py  test_today_acs_events.py
scripts/generate_sdk/: __init__.py  custom_printer.py  generate_sdk_bindings.py
scripts/generate_sdk/incEn/: HCNetSDK.h
server/: Dockerfile  create_table.sql  docker-compose.yml  sync_attendance.php
src/cida_attendance/: cli.py
src/cida_attendance/core/: tasks.py
src/cida_attendance/sdk/: __init__.py  _generated.py  bindings.py  session.py
src/cida_attendance/ui/: app.py
tests/: conftest.py
tests/integration/: test_alarm_events.py  test_today_acs_events.py
